--- a/.github/workflows/WRT-CORE.yml
+++ b/.github/workflows/WRT-CORE.yml
@@ -245,11 +245,23 @@ jobs:
           tag_name: ${{env.CI_NAME}}-${{env.WRT_CONFIG}}_${{env.WRT_DATE}}
           files: ./wrt/upload/*.*
           body: |
-            京东云亚瑟AX1800pro专属固件包
-            代码来自Davidtall、VIKINGYFY
-            适度精简，确保最大性能发挥，开启内核eBPF，Dae吃鹅优选，建议硬改1GB内存的使用
+            # OpenWRT-CI Stable版
+            京东云亚瑟AX1800pro专属固件包  
+
+            有何变化？
+  
+            1.源代码切换为openwrt24.10
+  
+            2.重回opkg包管理器
+  
+            （部分代码来自Davidtall、VIKINGYFY）
+  
+            适度精简，确保最大性能发挥，开启内核eBPF，Dae吃鹅优选，建议硬改1GB内存的使用。
+  
             刷机前请更换分区表和uboot,参考链接: https://www.right.com.cn/forum/thread-8402269-1-1.html            
+  
             全系带开源硬件加速。
+
 
             源码：${{env.WRT_REPO}}
             分支：${{env.WRT_BRANCH}}
@@ -266,4 +278,5 @@ jobs:
 
             内核版本：${{env.WRT_KVER}}
             插件列表：${{env.WRT_LIST}}
+
 
